# claude-code-config

./: .editorconfig  .gitignore  .markdownlint.json  .mcp.json  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  demo.tape  keybindings.json  pyproject.toml  release-please-config.json  settings.json  settings.local.json  settings.personal.json.example
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
agents/: bug-resolver.md  career-adviser.md  ci-debugger.md  code-reviewer.md  content-reviewer.md  database-architect.md  dependency-manager.md  devops-engineer.md  django-code-reviewer.md  documentation-writer.md  e2e-playwright-engineer.md  fix.md  git-helper.md  implement.md  migration-engineer.md  performance-engineer.md  pr-review-bundler.md  refactor.md  refactoring-engineer.md  review-pr.md  security-auditor.md  ship.md  spec-writer.md  test-engineer.md  ticket-writer.md
commands/: adr.md  commit.md  context.md  coverage-report.md  deps.md  eow-review.md  explain.md  format-release-notes.md  generate-changelog.md  hotfix.md  later.md  lint.md  pr.md  refinement.md  review.md  scope.md  security-scan.md  ship-it.md  standup.md  status.md  tdd.md
docs/: architecture.md  extending.md  mcp-servers.md
githooks/: pre-push
github-actions/: claude-changelog.yml  claude-pr-review.yml
home/: CLAUDE.md
hooks/: hooks.json
mcp-templates/: aws.json  base.json  django.json  fastapi.json  nextjs.json  node.json  (+2 more)
(+101 files in other folders)
