# Minimal pyproject.toml — only used to configure ruff for the two
# utility scripts in scripts/. This repo isn't a Python package and
# isn't installed via pip; no [project] table is needed.

[tool.ruff]
target-version = "py38"
line-length = 100
# tooling/ is vendored payload copied verbatim into other repos — not this
# repo's own source, so it's excluded from this repo's lint/format.
extend-exclude = ["tooling"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
]
ignore = [
  # Allow `assert` statements — these scripts aren't long-running services.
  "S101",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
